# kamatera-rke2-kubernetes-terraform-example

./: .gitignore  README.md  server_startup_script.sh
.github/workflows/: ci.yaml
01-rke2/: 01-servers.tf  02-init-bastion.tf  03-init-rke2.tf  04-ssh-config.tf  05-kubeconfig.tf  06-k8s-tfvars.tf  main.tf  terraform.tfvars.example  variables.tf
02-k8s/: autoscaler.tf  autoscaler.yaml  kamatera-controller.tf  main.tf  rke2-config.tf  taints.tf  terraform.tfvars.example  variables.tf
tests/: README.md  pyproject.toml
tests/src/kamatera_rke2_kubernetes_terraform_example_tests/: __init__.py  cli.py  config.py  destroy.py  k8s_demo_app.py  setup.py  util.py
tests/tests/: common.py  k8s_demo_app.yaml  test_demo_app.py  test_static.py
