[project]
name = "kamatera_rke2_kubernetes_terraform_example_tests"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
kamatera-rke2-kubernetes-terraform-example-tests = "kamatera_rke2_kubernetes_terraform_example_tests.cli:main"
